# APIMonitor

./: APIMonitor.sln  LICENSE  README.md  compose.yaml
.github/workflows/: main_monitor.yml
APIMonitor.server/: .gitignore  APIMonitor.server.csproj  APIMonitor.server.http  Program.cs  appsettings.Development.json  appsettings.json  docker run -d \.dockerfile  dsdas
APIMonitor.server/Controllers/: ApiMetricsController.cs  ApiMonitorController.cs  ApiRequestLogController.cs  ApiScanController.cs  ApiScannerController.cs  AuditLogController.cs  NotificationController.cs  NotificationPreferencesController.cs  ThreatLogsController.cs  UserController.cs
APIMonitor.server/Data/: ApplicationDbContext.cs  ApplicationDbContextFactory.cs  Constants.cs
APIMonitor.server/Hubs/: NotificationHub.cs  SecurityHub.cs
APIMonitor.server/Identity/: User.cs
APIMonitor.server/Middleware/: IpBanMiddleware.cs  (+2 more)
AuthApi/: .gitignore  AuthApi.csproj  AuthApi.http  Dockerfile  Program.cs
apimonitor.client/: .gitignore  angular.json  index.html  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
data_capture/: build.zig  build.zig.zon
data_pipeline/: Cargo.toml
scanner/: CMakeLists.txt
securityApi/: securityApi.http
server/: CMakeLists.txt
server/docs/: temp
server/include/helpers/: geoip.h  grading.h
server/include/scanner/: http_headers_analyzer.h  network_analyzer.h
server/src/: main.c
server/src/helpers/: geoip.c  grading.c
server/src/scanner/: http_headers_analyzer.c  network_analyzer.c
(+217 files in other folders)
